refactor: Refatorando controller para usar a service